--- a/lesson3/add/main.html
+++ b/lesson3/add/main.html
@@ -137,11 +137,11 @@
         case 5:
             alert('You win flat');
             break;
+        default:
+            alert('wrong')
 
     }
-    if (num>5){
-        alert('Wrong number')
-    }
+
 
 
 </script>
