--- a/lesson4/additional/add1/main.html
+++ b/lesson4/additional/add1/main.html
@@ -643,8 +643,8 @@
 document.write(`<div class="wrap">`)
     for (const post of posts) {
         document.write(`<div class="post_wrap">`)
-        document.write(`<h3>${post.id} - ${post.title}</h3>`)
-        document.write(`<p>${post.body}</p>`)
+        document.write(`<h3>${post.id} - ${post.title} </h3><p>${post.body}</p>`)
+
         document.write(`</div>`)
     }
     document.write(`</div>`)
