--- a/lesson10/user-details.html
+++ b/lesson10/user-details.html
@@ -12,7 +12,6 @@
         .then((response)=>response.json())
         .then((user)=>{
             let mainDiv = document.createElement('div');
-            let titleDiv = document.createElement('div');
             function recursion(element){
                 for (const value in element) {
                     if (typeof element[value]!=='object'){
@@ -27,7 +26,7 @@
             recursion(user)
 
 
-            document.body.append(mainDiv, titleDiv)
+            document.body.append(mainDiv)
 
         })
 
