--- a/mini-project/post-details.html
+++ b/mini-project/post-details.html
@@ -3,8 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .wrap{
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            display: flex;
+            flex-direction: column;
+            row-gap: 20px;
+        }
+        .info,.info2{
+            border: solid 1px black;
+            font-size: 20px;
+        }
+        button{
+            background: black;
+            color: white;
+            font-size: 15px;
+            width: 90%;
+            margin-left: 5%;
+            margin-top: 30px;
+            cursor: pointer;
+
+        }
+        button:hover{
+            background: red;
+        }
+        #comWrap{
+            width: 90%;
+            margin-left: 5%;
+            column-gap: 6%;
+            flex-wrap: wrap;
+            row-gap: 10px;
+            margin-top: 30px;
+            display: none;
+        }
+
+        .com{
+            width: 20%;
+        }
+    </style>
 </head>
 <body>
-
+<script src="js/post-details.js"></script>
 </body>
 </html>
