--- a/mini-project/user-details.html
+++ b/mini-project/user-details.html
@@ -34,21 +34,39 @@
         .btn2:hover{
             background: red;
         }
-        .posts{
+        #posts{
+
             width: 90%;
-            font-size: 20px;
             margin-left: 5%;
-            margin-top: 60px;
-            display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            column-gap: 1%;
             row-gap: 10px;
+            margin-top: 30px;
+            display: none;
+        }
+        .name{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            width: 18%;
+            height: 100px;
+            position: relative;
+            border: solid black 1px;
+            font-weight: bold;
+            text-align: center;
         }
         .btn3{
-            background: #5c3838;
-            color: white;
-            border: none;
+            position: absolute;
+            bottom: 0;
+            font-weight: bold;
+            background: #c44c4c;
             cursor: pointer;
-            height: 20px;
+            width: 100%;
+
+        }
+        .btn3:hover{
+            background: #902ea4;
         }
 
     </style>
